dinoco_tests/tests/dinoco/ui/fail/type_safe_insert_wrong_model.rs
#[path = "../common.rs"]
mod common;

use dinoco::insert_into;

use common::{Team, User};

fn main() {
    let _ = insert_into::<User>().values(Team { id: "team-1".to_string(), name: "Platform".to_string() });
}
