dinoco_tests/tests/dinoco/ui/fail/type_safe_insert_wrong_model.stderr
error[E0277]: the trait bound `Team: InsertPayload<User>` is not satisfied
 --> tests/dinoco/ui/fail/type_safe_insert_wrong_model.rs:9:42
  |
9 |     let _ = insert_into::<User>().values(Team { id: "team-1".to_string(), name: "Platform".to_string() });
  |                                   ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |                                   |
  |                                   required by a bound introduced by this call
  |
help: the trait `InsertPayload<User>` is not implemented for `Team`
 --> tests/dinoco/ui/fail/../common.rs
  |
  | pub struct Team {
  | ^^^^^^^^^^^^^^^
note: required by a bound in `Insert::<M, V>::values`
 --> $WORKSPACE/dinoco/src/methods/insert_into.rs
  |
  |     pub fn values<N>(self, item: N) -> Insert<M, N>
  |            ------ required by a bound in this associated function
  |     where
  |         N: InsertPayload<M>,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `Insert::<M, V>::values`
